單一商品頁面完成90%
_singleItem.jsp

--- a/AllBuyBack/src/main/webapp/styles/singleItem.css
+++ b/AllBuyBack/src/main/webapp/styles/singleItem.css
@@ -16,6 +16,27 @@
     letter-spacing:5px;
 }
 
+#eye {
+  position:absolute;
+  top:80px;
+  left:40px;
+  /*margin-right:20px;*/
+
+}
+#heart {
+  position:absolute;
+  top:80px;
+  left:90px;
+  /*margin-right:20px;*/
+
+}
+#shoppingCart {
+  position:absolute;
+  top:80px;
+  left:140px;
+  margin-right:20px;
+
+}
 .mainPhoto {/*淡灰色背景*/
     position:absolute;
     top:100px;
@@ -178,7 +199,10 @@
 
 .seller { /*賣家相關資訊 訂閱我*/
      margin-top:30px;
-     height:600px;
+     height:610px;
      background-color:rgb(255,255,255);
-
+     border-top:4px black solid;
+     border-bottom:4px black solid;
+     
 }
+
