單一商品頁面新增買廣告功能 以及收藏數、瀏覽數、代購數功能

--- a/AllBuyBack/src/main/webapp/styles/singleItem.css
+++ b/AllBuyBack/src/main/webapp/styles/singleItem.css
@@ -26,14 +26,14 @@
 #heart {
   position:absolute;
   top:80px;
-  left:90px;
+  left:100px;
   /*margin-right:20px;*/
 
 }
 #shoppingCart {
   position:absolute;
   top:80px;
-  left:140px;
+  left:160px;
   margin-right:20px;
 
 }
@@ -133,24 +133,26 @@
     line-height:65px;
     letter-spacing:5px;
 }
-.wantBuy {/*聯絡代購*/
-     position:absolute;
-     right:35px;
-     top:385px;
-     width:300px;
-     height:50px;
-     background-color:rgb(42,186,171);
-     color:white;
-     font-size:22px;
-     font-family:微軟正黑體;
-     border-radius:5px 5px;
-     border:rgb(42,186,171);
+
+
+.count {/*數量*/
+    position:absolute;
+    right:35px;
+    top:380px;
+    border-bottom:1px solid lightgray;
+    height:65px;
+    width:550px;
+    font-family:微軟正黑體;
+    font-size:20px;
+    line-height:65px;
+    letter-spacing:5px;
 }
-.favorite {/*加入收藏*/
+
+.shoppingCart {/*加入購物車按鈕*/
      position:absolute;
-     right:350px;
-     top:385px;
-     width:230px;
+     right:340px;
+     top:455px;
+     width:250px;
      height:50px;
      background-color:#8B7D6B;/*#CDB79E;/*rgb(42,186,171);*/
      color:white;
@@ -160,10 +162,26 @@
      border:#8B7D6B;
 
 }
+
+
+.wantBuy {/*聯絡賣家*/
+     position:absolute;
+     right:35px;
+     top:455px;
+     width:280px;
+     height:50px;
+     background-color:rgb(42,186,171);
+     color:white;
+     font-size:22px;
+     font-family:微軟正黑體;
+     border-radius:5px 5px;
+     border:rgb(42,186,171);
+}
+
 .pay {
     position:absolute;
     right:35px;
-    top:450px;
+    top:520px;
     border-bottom:1px solid lightgray;
     border-top:1px solid lightgray;
     height:65px;
@@ -178,7 +196,7 @@
 .deliver {
     position:absolute;
     right:35px;
-    top:515px;
+    top:590px;
     border-bottom:1px solid lightgray;
     height:70px;
     width:550px;
