單一商品頁面調整

--- a/AllBuyBack/src/main/webapp/styles/singleItem.css
+++ b/AllBuyBack/src/main/webapp/styles/singleItem.css
@@ -2,7 +2,7 @@
      position:relative;
      margin-top:10px;
      height:760px;
-     background-color:wheat;/*rgb(255,255,255)*/
+     background-color:white;/*rgb(255,255,255)*/
  }
  
 .productTitle {
